# XequiNet

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_CN.md  environment.yaml  install_env.sh  pyproject.toml  setup.py
XequiNet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
xequinet/: __init__.py  dynamics.py  geo_opt.py  inference.py  jit_script.py  keys.py  main.py  test.py  test_mat.py  train.py  train_hessian.py  train_mat.py
xequinet/data/: __init__.py  datapoint.py  fmt_conversion.py  hdf5_data.py  hessian_data.py  lmdb_data.py  pbc_data.py  radius_graph.py  radius_pbc.py  text_data.py  transform.py  xyz_data.py
xequinet/deprecated/: config_old.py  deprecated.py  equiblk.py  equiformer.py  gfn2-xtb_embedding_old.pt  model.py  pm7_embedding_old.pt
xequinet/docs/: application.md  config.md  dataset.md  deployment.md  geometry.md  inference.md  train_and_test.md  training.md
xequinet/interface/: __init__.py  ase_calculator.py  delta_base.py  ipi_driver.py  jit_model.py  lmp_model.py  md_model.py  mopac.py
xequinet/nn/: QHNet.py  __init__.py  basic.py  electronic.py  ewald.py  jit_model.py  matlayer.py  model.py  o3layer.py  output.py  painn.py  painn_ori.py  rbf.py  so3krates.py  tensorproduct.py  tp.py  tpainn.py  xe3net.py  xmatrix.py  xpainn.py  xpainnorb.py  xpainorb.py  xqhnet.py
xequinet/run/: __init__.py  dynamics.py  fock_stda.py  geometry.py  inference.py  jit_script.py  pimd.py  test.py  train.py
xequinet/utils/: __init__.py  config.py  functional.py  keys.py  logger.py  loss.py  lr_scheduler.py  qc.py  (+4 more)
(+25 files in other folders)
